Use List.of when applicable